--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,4 +1,9 @@
+@import '../../node_modules/leaflet-geosearch/assets/css/leaflet.css';
+
 #mapid {
   width: 600px;
-  height: 400px;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
 }
