--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,4 +1,6 @@
+@import '../../node_modules/leaflet-geosearch/assets/css/leaflet.css';
+
 #mapid {
-  width: 600px;
-  height: 400px;
+  width: 100vw;
+  height: 100vh;
 }
