--- a/Map-master/source/scss/app.scss
+++ b/Map-master/source/scss/app.scss
@@ -1,9 +1,6 @@
 @import '../../node_modules/leaflet-geosearch/assets/css/leaflet.css';
 
 #mapid {
-  width: 600px;
-  height: 600px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
+  width: 100vw;
+  height: 100vh;
 }
