refactored the code

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,5 +1,7 @@
+// Styles for Leaflet Geosearch Control
 @import '../../node_modules/leaflet-geosearch/assets/css/leaflet.css';
 
+// Other Styles
 #mapid {
   width: 100vw;
   height: 100vh;
