--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,8 +1,14 @@
 // Styles for Leaflet Geosearch Control
+@import '../../node_modules/leaflet.locatecontrol/src/L.Control.Locate.scss';
 @import '../../node_modules/leaflet-geosearch/assets/css/leaflet.css';
 
 // Other Styles
 #mapid {
-  width: 100vw;
-  height: 100vh;
+  width: 90vw;
+  height: 90vh;
+}
+
+.leaflet-control-minimap {
+  border: 5px solid #fff;
+  box-shadow: 0 0 16px rgba(#000, 0.5);
 }
